@@ -1,3 +1,11 @@
+2015-05-06  Sandra Loosemore  <sandra@codesourcery.com>
+	    Chris Jones  <chrisj@nvidia.com>
+	    Joshua Conner  <jconner@nvidia.com>
+
+	* config/arm/unknown-elf.h (STARTFILE_SPEC): Add conditional
+	linking of crtfastmath.o.
+	* config/arm/linux-eabi.h (STARTFILE_SPEC): Likewise.
+
 2015-05-06  Segher Boessenkool  <segher@kernel.crashing.org>
 
 	* config/rs6000/rs6000.md (cstore<mode>4_signed_imm): New expander.
